styles.css
header, footer{
	background: white;
	height: 60px;
	color: #c0c0c0;
	padding: 30px;
	font-size: 2.2em;
	font-family: 'Montserrat', sans-serif;
}

.grid-item-aandn { width: 500px; }
.grid-item--width2 { width: 400px; }

.grid.effect-4 { /* Chrome, Safari, Opera */
    perspective: 500px;
}

.grid.effect-4 a {
	transform-style: preserve-3d;
}

.grid.effect-4 a.animate {
	transform: translateZ(400px) translateY(300px) rotateX(-90deg);
	animation: fallPerspective .8s ease-in-out forwards;
}

@keyframes fallPerspective {
	100% { transform: translateZ(0px) translateY(0px) rotateX(0deg); opacity: 1; }
}

header {
	display: -ms-flexbox !important;
	display: flex !important;
	-ms-flex-pack: center;
	    justify-content: center; 
	-ms-flex-align: center; 
	    align-items: center;
}

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 680px)
  and (-webkit-min-device-pixel-ratio: 2) {
  	header {
  		-ms-flex-direction: column;
  		    flex-direction: column;
  	}

  	#nav-links {
  		text-align: center;
  	}
}

#nav-name {
	-ms-flex: 1;
	    flex: 1;
}

#nav-links {
	-ms-flex: 1;
	    flex: 1;
	-ms-flex-pack: justify;
	    justify-content: space-between;
	max-width: 400px;
	text-align: right;
}

#nav-links a {
	font-size: 16px;
	color:inherit;
	text-decoration: none;
	margin: 0 10px;
}

#nav-links a.active {
	border-bottom: 2px solid white;
	padding-bottom: 6px;
}

footer {
	display: -ms-flexbox !important;
	display: flex !important;
	-ms-flex-line-pack: center;
	    align-content: center;
	-ms-flex-pack: center;
	    justify-content: center;
}

#footer-box {
	-ms-flex: 1;
	    flex: 1;
	display: -ms-flexbox !important;
	display: flex !important;
	-ms-flex-pack: justify;
	    justify-content: space-between;
	-ms-flex-align: center;
	    align-items: center;
	max-width: 400px;
}

footer a {
	color: inherit;
	font-size: 0.8em;
}

.desc:hover {
	opacity: 1;
}

.desc {
	transition: .3s ease-in-out;
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	text-align: center;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: center;
	    justify-content: center;
	-ms-flex-align: center;
	    align-items: center;
	font-family: "Montserrat";
	font-size: 2em;
	color: #fff;
	background: rgba(0, 0, 0, 0.5);
	cursor: pointer;
	border-radius: 5px;
}

#nav-filter {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: distribute;
	    justify-content: space-around;
	-ms-flex-align: center;
	    align-items: center;
	-ms-flex: 1;
	    flex: 1;
	background-color: #eee;
	font-family: "Montserrat";
}



#nav-filter a{
	padding: 20px;
	text-decoration: none;
	color: #c0c0c0;
	-ms-flex: 1;
	    flex: 1;
	text-align: center;
	transition: .2s ease-in-out;
}

#nav-filter a:hover{
	background: #76bfff;
	color: white;
	cursor: pointer;
	transform: scale(1.1, 1.1);
}

#nav-filter a.active{
	background: #0088ff;
	color: white;
	transform: scale(1.1, 1.1);
}

@media (max-width: 700px) {
	#nav-filter{
		-ms-flex-direction: column;
		    flex-direction: column
	}

	#nav-filter a {
		-ms-flex: 1;
		    flex: 1;
		width: 100%;
		padding-left: 0;
		padding-right: 0; 
	}
}

section#projects {
	padding: 20px;
}

